# calculator-py

./: .gitignore  Readme.md  pyproject.toml
.github/: python.yml
.github/workflows/: python.yml
examples/: main.py
lib/: __init__.py
lib/calculator/: __init__.py  calculator.py  divide.py
lib/errors/: __init__.py  error.py
tests/: calculator.py  devide.py
