[tool.poetry]
name = "silly-calculator"
version = "1.0.0"
description = "Calculator build on numpy with rust way"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
result = "^0.17.0"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
